feat(frontend): adicionado opções de esquecer e resetar senha e ativar conta
Adicionadas novas páginas para ativação de conta, esquecimento e reset de senha
-adicionado sistema de adicionar volume a um mangá no painel de admin
-adicionado paginação a home do site

--- a/mymanga-frontend/mymanga-frontend/src/app/components/footer/footer.html
+++ b/mymanga-frontend/mymanga-frontend/src/app/components/footer/footer.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="bg-dark text-white text-center p-3 mt-4">
+  <div class="container">
+    <p class="mb-0">&copy; 2025 MyManga. Todos os direitos reservados.</p>
+  </div>
+</footer>
