--- a/mymanga-frontend/mymanga-frontend/src/app/pages/login/login.html
+++ b/mymanga-frontend/mymanga-frontend/src/app/pages/login/login.html
@@ -44,8 +44,9 @@
       </form>
     </div>
 
-    <div class="card-footer text-center">
-      <a routerLink="/register" class="text-decoration-none">Não tem conta? Cadastre-se</a>
+    <div class="card-footer d-flex justify-content-between">
+      <a routerLink="/register" class="text-decoration-none text-primary">Não tem conta? Cadastre-se</a>
+      <a routerLink="/forgot-password" class="text-decoration-none text-primary">Esqueci minha senha</a>
     </div>
   </div>
 </div>
