--- a/mymanga-frontend/mymanga-frontend/src/styles.scss
+++ b/mymanga-frontend/mymanga-frontend/src/styles.scss
@@ -1,2 +1,11 @@
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@use "bootstrap/scss/bootstrap";
+
+html, body { 
+  height: 100%; 
+}
+
+body { 
+  margin: 0; 
+  font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
