feat(api) : adicionado Listener para criação Order e User
Adicionado listener que realiza o envio de emails de confirmação das classes de Users e Order

--- a/mymanga-frontend/mymanga-frontend/src/app/components/footer/footer.html
+++ b/mymanga-frontend/mymanga-frontend/src/app/components/footer/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-dark text-white text-center p-3 mt-4">
   <div class="container">
-    <p class="mb-0">&copy; 2025 MyManga. Todos os direitos reservados.</p>
+    <p class="mb-0">&copy; 2025 MyMangá. Este é um projeto fictício. </p>
   </div>
 </footer>
